--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-google-signin": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
-    "redux": "^4.0.1"
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-preset-expo": "^5.1.1"
   },
   "private": true
