--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^6.1.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
+    "react-kawaii": "^0.14.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-web": "^0.11.4",
@@ -21,7 +22,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^5.1.1",
+    "metro-react-native-babel-preset": "^0.54.1"
   },
   "private": true
 }
