--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "build": "expo build:android --release-channel production"
   },
   "dependencies": {
-    "expo": "^33.0.0",
+    "expo": "^36.0.0",
+    "expo-app-auth": "~8.0.0",
     "firebase": "^6.1.1",
-    "react": "16.8.3",
-    "react-dom": "^16.8.6",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
     "react-kawaii": "^0.14.4",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-keyboard-aware-scroll-view": "^0.8.0",
-    "react-native-svg": "^9.13.6",
-    "react-native-web": "^0.11.4",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-keyboard-aware-scroll-view": "^2.1.0",
+    "react-native-svg": "9.13.3",
+    "react-native-web": "^0.11.7",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "@react-native-community/netinfo": "4.6.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1",
+    "babel-preset-expo": "^7.0.0",
     "metro-react-native-babel-preset": "^0.54.1"
   },
   "private": true
