--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,14 @@ web-report/
 
 credentials.js
 app.json
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+**/.history
