--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "5.9.6",
+    "@reduxjs/toolkit": "^1.4.0",
     "expo": "^39.0.0",
     "expo-app-auth": "~9.2.0",
     "expo-google-app-auth": "^8.0.0",
-    "firebase": "7.9.0",
+    "firebase": "^7.24.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-kawaii": "^0.14.4",
@@ -26,20 +27,26 @@
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.12.1",
     "@types/jest": "^26.0.14",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "babel-preset-expo": "^8.3.0",
     "eslint": "^7.11.0",
+    "eslint-plugin-jsdoc": "^30.7.3",
     "eslint-plugin-react": "^7.21.4",
+    "jsdoc": "^3.6.6",
     "metro-react-native-babel-preset": "^0.54.1",
+    "ts-node": "^9.0.0",
     "typescript": "~3.9.2"
   },
   "private": true
