--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "build": "expo build:android --release-channel production"
+    "build": "expo build:android --release-channel production",
+    "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.6",
+    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
     "@reduxjs/toolkit": "^1.4.0",
+    "dayjs": "^1.9.3",
     "expo": "^39.0.0",
     "expo-app-auth": "~9.2.0",
     "expo-google-app-auth": "^8.0.0",
@@ -21,10 +27,11 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.7",
-    "react-navigation": "^3.11.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
@@ -32,8 +39,10 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.12.1",
+    "@types/expo__vector-icons": "^9.0.1",
     "@types/jest": "^26.0.14",
     "@types/react": "~16.9.35",
+    "@types/react-kawaii": "^0.11.0",
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
@@ -46,6 +55,7 @@
     "eslint-plugin-react": "^7.21.4",
     "jsdoc": "^3.6.6",
     "metro-react-native-babel-preset": "^0.54.1",
+    "ts-jest": "^26.4.2",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.2"
   },
