--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
     "expo": "^39.0.0",
     "expo-app-auth": "~9.2.0",
     "expo-google-app-auth": "^8.0.0",
+    "expo-random": "~9.0.0",
     "firebase": "^7.24.0",
+    "fuse.js": "^6.4.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-kawaii": "^0.14.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-gesture-handler": "~1.7.0",
-    "react-native-keyboard-aware-scroll-view": "^0.8.0",
+    "react-native-get-random-values": "^1.5.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.12.1",
+    "@react-native-community/async-storage": "^1.12.1",
     "@types/expo__vector-icons": "^9.0.1",
     "@types/jest": "^26.0.14",
     "@types/react": "~16.9.35",
@@ -49,6 +52,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "^8.3.0",
     "eslint": "^7.11.0",
     "eslint-plugin-jsdoc": "^30.7.3",
