Add Jest testing on jot slice
Also fixed:
- items were uploading when they shouldn't.
- listening for auth changes was moved to an api.
- shuffled setup logic.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,12 +23,12 @@
       "request": "attach"
     },
     {
-      "name": "Update User With Guid",
+      "name": "Script",
       "type": "node",
       "request": "launch",
       "runtimeExecutable": "node",
       "runtimeArgs": ["--nolazy", "-r", "ts-node/register"],
-      "args": ["scripts/updateUsersWithGuid.ts"],
+      "args": ["scripts/__filename__.ts"],
       "cwd": "${workspaceRoot}",
       "internalConsoleOptions": "openOnSessionStart",
       "skipFiles": ["<node_internals>/**", "node_modules/**"],
