--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "5.9.6",
     "@react-navigation/bottom-tabs": "^5.9.2",
     "@react-navigation/native": "^5.7.6",
     "@react-navigation/stack": "^5.9.3",
     "@reduxjs/toolkit": "^1.4.0",
+    "babel-jest": "^26.6.1",
     "dayjs": "^1.9.3",
     "expo": "^39.0.0",
     "expo-app-auth": "~9.2.0",
     "expo-google-app-auth": "^8.0.0",
+    "expo-localization": "~9.0.0",
     "expo-random": "~9.0.0",
     "firebase": "^7.24.0",
     "fuse.js": "^6.4.2",
@@ -49,6 +53,7 @@
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
@@ -59,6 +64,7 @@
     "eslint-plugin-react": "^7.21.4",
     "jsdoc": "^3.6.6",
     "metro-react-native-babel-preset": "^0.54.1",
+    "redux-mock-store": "^1.5.4",
     "ts-jest": "^26.4.2",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.2"
