--- a/package.json
+++ b/package.json
@@ -1,73 +1,70 @@
 {
-    "main": "node_modules/expo/AppEntry.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start --web",
-        "eject": "expo eject",
-        "build": "expo build:android -t apk",
-        "test": "jest"
-    },
-    "dependencies": {
-        "@babel/core": "^7.12.3",
-        "@babel/preset-env": "^7.12.1",
-        "@react-native-community/masked-view": "0.1.10",
-        "@react-native-community/netinfo": "5.9.6",
-        "@react-navigation/bottom-tabs": "^5.9.2",
-        "@react-navigation/native": "^5.7.6",
-        "@react-navigation/stack": "^5.9.3",
-        "@reduxjs/toolkit": "^1.4.0",
-        "babel-jest": "^26.6.1",
-        "dayjs": "^1.9.3",
-        "expo": "^39.0.0",
-        "expo-app-auth": "~9.2.0",
-        "expo-google-app-auth": "^8.0.0",
-        "expo-localization": "~9.0.0",
-        "expo-random": "~9.0.0",
-        "firebase": "^7.24.0",
-        "fuse.js": "^6.4.2",
-        "react": "16.13.1",
-        "react-dom": "16.13.1",
-        "react-kawaii": "^0.14.4",
-        "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-        "react-native-gesture-handler": "~1.7.0",
-        "react-native-get-random-values": "^1.5.0",
-        "react-native-reanimated": "~1.13.0",
-        "react-native-safe-area-context": "3.1.4",
-        "react-native-screens": "~2.10.1",
-        "react-native-svg": "12.1.0",
-        "react-native-web": "~0.13.7",
-        "react-redux": "^7.1.0",
-        "redux": "^4.0.1",
-        "redux-thunk": "^2.3.0",
-        "uuid": "^8.3.1"
-    },
-    "devDependencies": {
-        "@babel/preset-typescript": "^7.12.1",
-        "@react-native-community/async-storage": "^1.12.1",
-        "@types/expo__vector-icons": "^9.0.1",
-        "@types/jest": "^26.0.14",
-        "@types/react": "~16.9.35",
-        "@types/react-kawaii": "^0.11.0",
-        "@types/react-native": "~0.63.2",
-        "@types/react-redux": "^7.1.9",
-        "@types/react-test-renderer": "^16.9.3",
-        "@types/redux-mock-store": "^1.0.2",
-        "@types/uuid": "^8.3.0",
-        "@typescript-eslint/eslint-plugin": "^4.4.1",
-        "@typescript-eslint/parser": "^4.4.1",
-        "babel-plugin-module-resolver": "^4.0.0",
-        "babel-preset-expo": "^8.3.0",
-        "eslint": "^7.11.0",
-        "eslint-plugin-jsdoc": "^30.7.3",
-        "eslint-plugin-react": "^7.21.4",
-        "jsdoc": "^3.6.6",
-        "metro-react-native-babel-preset": "^0.54.1",
-        "redux-mock-store": "^1.5.4",
-        "ts-jest": "^26.4.2",
-        "ts-node": "^9.0.0",
-        "typescript": "~3.9.2"
-    },
-    "private": true
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "build": "expo build:android -t apk",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@expo/vector-icons": "^12.0.4",
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "6.0.0",
+    "@react-navigation/bottom-tabs": "^5.9.2",
+    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
+    "@reduxjs/toolkit": "^1.4.0",
+    "babel-jest": "^26.6.1",
+    "dayjs": "^1.9.3",
+    "expo": "^41.0.0",
+    "expo-app-auth": "~10.1.2",
+    "expo-google-app-auth": "^8.0.0",
+    "expo-localization": "~10.1.0",
+    "expo-random": "~11.1.2",
+    "firebase": "8.2.3",
+    "fuse.js": "^6.4.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-kawaii": "^0.14.4",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "~1.7.0",
+    "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-svg": "12.1.0",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "uuid": "^8.3.1"
+  },
+  "devDependencies": {
+    "@types/expo__vector-icons": "^9.0.1",
+    "@types/jest": "^26.0.14",
+    "@types/react": "~16.9.35",
+    "@types/react-kawaii": "^0.11.0",
+    "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-test-renderer": "^16.9.3",
+    "@types/redux-mock-store": "^1.0.2",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "babel-preset-expo": "8.3.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-jsdoc": "^30.7.3",
+    "eslint-plugin-react": "^7.21.4",
+    "jsdoc": "^3.6.6",
+    "redux-mock-store": "^1.5.4",
+    "ts-jest": "^26.4.2",
+    "ts-node": "^9.0.0",
+    "typescript": "~4.0.0"
+  },
+  "private": true
 }
